# Timetron

./: .gitignore  CMakeLists.txt  set_up_git_hooks.py
.github/workflows/: build_ci.yml
assets/app_resource/: resource.rc
cmake/: artefacts.cmake  cxx.cmake  get_cpm.cmake  project.cmake  publish.cmake  python.cmake  qt.cmake  sources.cmake  tinyxml.cmake
include/timetron_core/: data_day.h  data_diagnostic.h  data_timeline.h  proc_diagnose.h  proc_timeline.h  proc_util.h
include/timetron_ui_qt/: data_view.h  proc_view.h  version.ui  window.h  window.ui
script/version/: generate_git_version.py
src/timetron_core/: CMakeLists.txt  data_diagnostic.cpp  data_timeline.cpp  proc_diagnose.cpp  proc_timeline.cpp  proc_util.cpp
src/timetron_ui_qt/: CMakeLists.txt  data_view.cpp  main.cpp  proc_view.cpp  window.cpp
src/version/: CMakeLists.txt
util/: package_zip.py
